# aggro-db

./: .gitignore  to-do.md
backend/: .gitignore  README.md  bun.lockb  package.json  tsconfig.json
backend/src/: index.ts
backend/src/db/: connection.ts  schema.sql
backend/src/db/models/: database-metadata.ts
backend/src/routes/: db.ts  preferences.ts  query.ts
backend/src/utils/: app-db.ts  db-manager.ts  logger.ts
frontend/: bun.lockb  layout.tsx  package.json
frontend/app/: page.tsx
frontend/components/: db-upload.tsx  layout.tsx  recent-databases.tsx  results-viewer.tsx  sql-editor.tsx
frontend/components/pages/: browse-view.tsx  cron-view.tsx  databases-view.tsx  help-view.tsx  home-view.tsx  projects-view.tsx  settings-view.tsx  sql-view.tsx  structure-view.tsx  teams-view.tsx
frontend/components/ui/: sidebar.tsx
frontend/lib/: api-client.ts
frontend/lib/stores/: database-store.ts
rs-backend/: .env.example  .gitignore  Cargo.toml  README.md
rs-backend/src/: lib.rs  main.rs
rs-backend/src/db/: connection.rs  mod.rs
rs-backend/src/db/models/: database_metadata.rs
rs-backend/src/models/: database_metadata.rs  mod.rs
rs-backend/src/utils/: logger.rs  mod.rs
rs-backend/tests/: common.rs  mod.rs
rs-backend/tests/integration/: api_test.rs  upload_test.rs
rs-backend/tests/unit/: connection_test.rs  database_metadata_test.rs
src/: lib.rs
