[package]
name = "rs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["multipart", "macros"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tower-http = { version = "0.5.0", features = ["cors"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
multer = "3.0.0"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.8"
mime = "0.3"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.9"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.1", features = ["full"] }
tokio-test = "0.4"
assert_matches = "1.5"
test-log = { version = "0.2", features = ["trace"] }
once_cell = "1.19"
bytes = "1.5" 